# terminology

./: .arcconfig  .codecov.yml  .gitignore  .mailmap  AUTHORS  COLORSCHEMES.md  COPYING  ChangeLog  ChangeLog.theme  DESIGN.md  DEV.md  INSTALL  Makefile.am  Marrakesh.mrk  NEWS  README  README.md  THEME.md  THEMES.md  TODO  autogen.sh  configure.ac  meson.build  meson_install_themes.sh  meson_options.txt  terminology.spec.in
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: coccinelle.yaml
afl/in/: colors_fonts
data/: Makefile.am  meson.build  test_offscale.edc
data/backgrounds/: Makefile.am  meson.build
data/colorschemes/: Belafonte Day.ini  Belafonte Night.ini  Black.ini  Cobalt2.ini  Default.ini  Dracula.ini  Fahrenheit.ini  Fir Dark.ini  GruvBox Material Dark.ini  Material Dark.ini  Material.ini  Mild.ini  Mild.json  Mustang.ini  Mustang.json  Nord.desc  Nord.ini  Nord.json  Ocean Dark.ini  Ocean Dark.json  One Dark.ini  PaleNight.ini  PaperColor.desc  PaperColor.ini  PaperColor.json  Selenized Black.ini  Selenized Dark.ini  Selenized Light.ini  Selenized White.ini  Smyck.ini  Smyck.json  Soft Era.ini  Solarized Light.ini  Solarized Light.json  Solarized.ini  Solarized.json  Tango Dark.ini  Tango Light.ini  Tomorrow Night Burns.ini  add_color_scheme.sh  (+6 more)
data/desktop/: Makefile.am  meson.build  terminology.desktop  terminology.desktop.in
data/fonts/: 4x6.pcf  5x7.pcf  5x8.pcf  6x10.pcf  6x12.pcf  6x13.pcf  6x9.pcf  7x13.pcf  7x14.pcf  8x13.pcf  9x15.pcf  9x18.pcf  ARTWIZ.txt  Makefile.am  TERMINUS.txt  XFONT.txt  meson.build  nexus.pcf  terminus-12.pcf  terminus-14-bold.pcf  terminus-14.pcf  terminus-16-bold.pcf  terminus-16.pcf  terminus-18-bold.pcf  terminus-18.pcf  terminus-20-bold.pcf  terminus-20.pcf
data/icons/: Makefile.am  meson.build
data/images/: Makefile.am  meson.build
data/themes/: Makefile.am  background_nord.edc  base16_ocean_dark.edc  black.edc  default.edc  default_colors.in.edc  dnd.c  dnd.edc  meson.build  mild.edc  mustang.edc  nord.edc  papercolor.edc  sel_nord.edc  smyck.edc  solarized.edc  solarized_light.edc  tab_drag_thumb_nord.edc
data/themes/default/: about.edc  background.edc  base.edc  color_preview.edc  colors.edc  core.edc  cursor.edc  fontpreview.edc  icon.edc  keybinding.edc  link.edc  media.edc  miniview.edc  sel.edc  selection.edc  tab_drag_thumb.edc  tabbar_back.edc
data/themes/images/: Makefile.am  mediactrl.xcf  mediactrl2.xcf  tab.xcf
data/themes/images/xcf/: mediactrl.xcf
data/themes/nyanology/: Makefile.am  README.md  about.edc  default.edc  meson.build  nyancursor.edc  nyanology.edc
data/themes/nyanology/images/: Makefile.am
data/themes/nyanology/images-sources/: Makefile.am  cat01-transparenttail.xcf  catonly.xcf  star-analysis.xcf  star.xcf
data/themes/sounds/: Makefile.am
m4/: ac_attribute.m4  efl_beta.m4  efl_binary.m4  efl_eo.m4
man/: Makefile.am  meson.build  terminology-helpers.1  terminology.1  typop.1
meson/: meson_install_themes.sh
pkgbuild/: PKGBUILD.in
po/: LINGUAS  Makevars  POTFILES.in  ca.po  da.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  lt.po  meson.build  ms.po  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  si.po  sk.po  sl.po  sr.po  sv.po  terminology.pot  th.po  tr.po  uk.po  vi.po  zh_Hans.po
scripts/: colorparser.zsh
scripts/coccinelle/: andconst.cocci  bad_return_type.cocci  badzero.cocci  coccicheck.sh  continue.cocci  div_round_up.cocci  free_stack.cocci  macros.cocci  mutex.cocci  notand.cocci  notnull.cocci  null_ref.cocci  unused.cocci  use_after_iter.cocci
snap/: snapcraft.yaml
snap/local/: efl-efreetd-search.patch
src/: Makefile.am
tests/: README.md  c2.sh  cbt.sh  cell_is_empty.sh  cha.sh  cnl.sh  color_link_css_hsl.sh  color_link_css_rgb.sh  color_link_edc.sh  color_link_sharp.sh  colors.sh  colors_regression.sh  cpl.sh  crash_empty_osc.sh  csi-38-no-value.sh  ctc.sh  cup.sh  cursor-movements-alias.sh  cursor-movements.sh  cursor-restore-wrapnext.sh  cursor-shape-0.sh  cursor-shape-1.sh  cursor-shape-2.sh  cursor-shape-3.sh  cursor-shape-4.sh  cursor-shape-5.sh  cursor-shape-6.sh  cursor-shape-7.sh  da.sh  dch.sh  decaln.sh  decawm.sh  decbi.sh  deccara-no-rectangular-no-restrict-cursor.sh  deccara-no-rectangular-restrict-cursor.sh  deccara-rectangular-no-restrict-cursor.sh  deccara-rectangular-restrict-cursor.sh  deccra.sh  decera-decfra-extra.sh  decera-no-restrict-cursor.sh  (+121 more)
tools/: 256color.pl  banner.sh  colors.sh  colors_with_faint.sh  fonts.sh  gen_tty_keys.sh  pacman.sh  party.pl  scroll.sh  unicode_dbl_width.py
