MAINTAINERCLEANFILES = Makefile.in
filesdir = $(pkgdatadir)/fonts
files_DATA = \
anorexia.pcf \
aqui.pcf \
cure.pcf \
drift.pcf \
edges.pcf \
fkp.pcf \
gelly.pcf \
glisp-bold.pcf \
glisp.pcf \
kates.pcf \
lime.pcf \
mints-mild.pcf \
mints-strong.pcf \
nex6x10.pcf \
nu.pcf \
smoothansi.pcf \
snap.pcf

EXTRA_DIST = $(files_DATA)
