MAINTAINERCLEANFILES = Makefile.in
filesdir = $(pkgdatadir)/fonts
files_DATA = \
10x20.pcf \
4x6.pcf \
5x7.pcf \
5x8.pcf \
6x10.pcf \
6x12.pcf \
6x13.pcf \
6x9.pcf \
7x13.pcf \
7x14.pcf \
8x13.pcf \
9x15.pcf \
9x18.pcf \
anorexia.pcf \
aqui.pcf \
cure.pcf \
drift.pcf \
edges.pcf \
fkp.pcf \
gelly.pcf \
glisp-bold.pcf \
glisp.pcf \
kates.pcf \
lime.pcf \
mints-mild.pcf \
mints-strong.pcf \
nex6x10.pcf \
nu.pcf \
smoothansi.pcf \
snap.pcf

EXTRA_DIST = $(files_DATA)
