MAINTAINERCLEANFILES = Makefile.in
filesdir = $(pkgdatadir)/fonts
files_DATA = \
10x20.pcf \
4x6.pcf \
5x7.pcf \
5x8.pcf \
6x10.pcf \
6x12.pcf \
6x13.pcf \
6x9.pcf \
7x13.pcf \
7x14.pcf \
8x13.pcf \
9x15.pcf \
9x18.pcf \
nexus.pcf \
terminus-12.pcf \
terminus-14-bold.pcf \
terminus-14.pcf \
terminus-16-bold.pcf \
terminus-16.pcf \
terminus-18-bold.pcf \
terminus-18.pcf \
terminus-20-bold.pcf \
terminus-20.pcf

EXTRA_DIST = $(files_DATA) \
TERMINUS.txt \
XFONT.txt

